# jupyterlab-mdx

./: .gitattributes  .gitignore  .prettierignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  RELEASE.md  docker-compose.yml  example.ipynb  install.json  jest.config.js  junit.xml  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: build.yml  check-release.yml
__mocks__/@jupyter/: react-components.js
__mocks__/@jupyterlab/: cells.js  notebook.js
binder/: environment.yml  postBuild
examples/: ex.bib  ex1.ipynb  ex2_named_enums.ipynb  ex3_citations.ipynb
src/: bib.ts  bibtex-parse-js.d.ts  index.ts  render.ts  state.ts  util.ts  xr.ts
src/__tests__/: bib.spec.ts  xr.spec.ts
static/: build_log.json  package.json
static/static/: lib_index_js.692940fcb9a6b62f4076.js  lib_index_js.692940fcb9a6b62f4076.js.map  remoteEntry.1855e3662d6dc75c1713.js  remoteEntry.1855e3662d6dc75c1713.js.map  style.js  style_index_js.65f18efc1a07a33631f0.js  style_index_js.65f18efc1a07a33631f0.js.map
style/: index.js
types/: fix-intl.d.ts
ui-tests/: package.json
ui-tests/tests/: jupyter_mdx.spec.ts
