[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_mdx"
version = "0.1.0"
description = "Markdown extensions with support for cross-references"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "David A. G. Harrison", email = "dosirrah@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["jupyterlab>=4.0.0"]

[project.entry-points."jupyterlab.extensions"]
jupyterlab-mdx = "jupyterlab_mdx"

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_mdx/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_mdx/labextension/jupyterlab-mdx" = "share/jupyter/labextensions/jupyterlab-mdx"